# myriadmesh

./: .clippy.toml  .gitignore  COMPREHENSIVE_BUG_ANALYSIS.md  CONTRIBUTING.md  CRYPTO_SECURITY_AUDIT.md  Cargo.toml  Cargo.toml.old  DHT_SPECIFICATION_ANALYSIS.md  FIXES_ACTION_PLAN.md  FIXES_CHECKPOINT.md  MARKET_READY_TODO.md  PHASE2_SNAPSHOT.md  PHASE3_PROGRESS.md  PHASE4_KICKOFF.md  PHASE_1_4_FIXES_SUMMARY.md  PHASE_5_FRAMEWORK_SUMMARY.md  PHASE_5_IMPLEMENTATION_STATUS.md  PHASE_5_PROGRESS_REPORT.md  PHASE_5_SECURITY_AUDIT.md  PHASE_6_ACTION_PLAN_REVIEW.md  PRODUCTION_TODO.md  PROJECT_ASSESSMENT.md  README.md  SECURITY_AUDIT_RED_TEAM.md  SECURITY_FIXES_ROADMAP.md  SECURITY_README.md  SECURITY_VULNERABILITIES_CHECKLIST.md  audit.toml  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  security-scan.yml
android/: README.md  build-rust.sh  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/myriadmesh/android/: MyriadMeshApplication.kt
android/app/src/main/kotlin/com/myriadmesh/android/core/: MyriadNode.kt
android/app/src/main/kotlin/com/myriadmesh/android/di/: AppModule.kt  (+1 more)
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
crates/myriadmesh-adapters/ethernet/: Cargo.toml
crates/myriadmesh-adapters/ethernet/src/: lib.rs
crates/myriadmesh-android/: Cargo.toml
crates/myriadmesh-android/src/: lib.rs  node.rs
crates/myriadmesh-appliance/: Cargo.toml
crates/myriadmesh-appliance/src/: cache.rs  device.rs  lib.rs  manager.rs  pairing.rs  power.rs  types.rs
crates/myriadmesh-core/: Cargo.toml
crates/myriadmesh-core/src/: lib.rs
crates/myriadmesh-crypto/: Cargo.toml
crates/myriadmesh-crypto/src/: channel.rs  encryption.rs  error.rs  identity.rs  lib.rs  signing.rs
crates/myriadmesh-dht/: Cargo.toml
crates/myriadmesh-dht/fuzz/: Cargo.toml
crates/myriadmesh-dht/fuzz/fuzz_targets/: dht_routing_table.rs
crates/myriadmesh-dht/src/: error.rs  iterative_lookup.rs  kbucket.rs  lib.rs  manager.rs  node_info.rs  operations.rs  reputation.rs  routing_table.rs  storage.rs
crates/myriadmesh-i2p/: Cargo.toml
crates/myriadmesh-i2p/src/: capability_token.rs  dual_identity.rs  lib.rs  onion.rs  privacy.rs  secure_token_exchange.rs
crates/myriadmesh-i2p/tests/: integration_test.rs
crates/myriadmesh-ledger/: Cargo.toml
crates/myriadmesh-ledger/src/: block.rs  consensus.rs  entry.rs  lib.rs  merkle.rs  storage.rs  sync.rs
crates/myriadmesh-network/: Cargo.toml
crates/myriadmesh-network/src/: adapter.rs  error.rs  lib.rs  license.rs  manager.rs  metrics.rs  plugin.rs  reload.rs  types.rs  version_tracking.rs
crates/myriadmesh-network/src/adapters/: aprs.rs  bluetooth.rs  bluetooth_le.rs  cellular.rs  dialup.rs  ethernet.rs  frsgmrs.rs  hf_radio.rs  lora.rs  mod.rs  wifi_halow.rs
crates/myriadmesh-network/src/i2p/: adapter.rs  embedded_router.rs  mod.rs  sam_client.rs
crates/myriadmesh-network/tests/: i2p_integration_test.rs  i2p_routing_integration_test.rs
crates/myriadmesh-protocol/: Cargo.toml
crates/myriadmesh-protocol/fuzz/: Cargo.toml
crates/myriadmesh-protocol/fuzz/fuzz_targets/: frame_parser.rs
crates/myriadmesh-protocol/src/: error.rs  frame.rs  lib.rs  message.rs  routing.rs  types.rs
crates/myriadmesh-routing/: Cargo.toml
crates/myriadmesh-routing/src/: adaptive.rs  dedup_cache.rs  deduplication.rs  error.rs  fragmentation.rs  geographic.rs  lib.rs  multipath.rs  offline_cache.rs  priority_queue.rs  qos.rs  rate_limiter.rs  router.rs
crates/myriadmesh-tui/: Cargo.toml  README.md
crates/myriadmesh-tui/src/: api_client.rs  app.rs  events.rs  main.rs
crates/myriadmesh-tui/src/ui/: dashboard.rs  help.rs  i2p.rs  logs.rs  messages.rs  mod.rs
crates/myriadmesh-updates/: Cargo.toml
crates/myriadmesh-updates/src/: coordination.rs  distribution.rs  schedule.rs  verification.rs
crates/myriadnode/: Cargo.toml  config.toml
crates/myriadnode/src/: api.rs  backhaul.rs  config.rs  failover.rs  heartbeat.rs  lib.rs  main.rs  monitor.rs  node.rs  scoring.rs  storage.rs
crates/myriadnode/test_data/diagnostics/: baseline.json
crates/myriadnode/tests/: integration_tests.rs
crates/myriadnode/web-ui/: README.md
crates/myriadnode/web-ui/src/lib/: api.ts  dataService.ts
crates/myriadnode/web-ui/src/routes/: +layout.svelte
docs/: P2_RELIABILITY_ROADMAP.md  PHASE_1_4_COMPLETION_SUMMARY.md  PHASE_1_4_TODOS.md  SESSION_HANDOFF.md
docs/architecture/: companion-app.md  overview.md
docs/design/: PHASE_5_ARCHITECTURE_PRD.md  PHASE_5_DESIGN_ANSWERS.md  PHASE_5_DESIGN_QUESTIONS.md  PHASE_6_ERROR_HANDLING_AUDIT.md  PHASE_6_EXECUTIVE_SUMMARY.md  PHASE_6_IMPLEMENTATION_KICKOFF.md  PHASE_6_P1_SECURITY_SESSION.md  PHASE_6_P2_ERROR_FIXES.md  PHASE_6_PLANNING.md  PHASE_6_PROGRESS_SESSION_1.md  PHASE_6_WEEK1_SUMMARY.md  README.md  account-identity-model.md  adapter-privacy-architecture.md  adaptive-security-updates.md  bootstrap-trust-system.md  emergency-protocol.md  heartbeat-protocol.md  i2p-anonymity-architecture.md  message-acknowledgement-protocol.md  phase2-detailed-design.md  phase2-executive-summary.md  phase2-privacy-protections.md  phase5-detailed-design.md
docs/guides/: GETTING_STARTED_RASPBERRYPI.md
docs/implementation/: phase2-implementation-plan.md  phase2-progress-snapshot.md
docs/phase4/: ANDROID_APPLIANCE_ARCHITECTURE.md  ANDROID_SETUP_GUIDE.md  APPLIANCE_API_GUIDE.md  PHASE_4_5_STATUS.md
docs/protocol/: dht-routing.md  network-adapters.md  specification.md
docs/roadmap/: phases.md
docs/security/: FUZZING_PLAN.md  P1_1_1_ED25519_REVIEW.md  P1_1_2_X25519_REVIEW.md  P1_1_3_XSALSA20_POLY1305_REVIEW.md  P1_1_4_BLAKE2B_REVIEW.md  P1_2_PROTOCOL_SECURITY_ANALYSIS.md  P1_3_DEPENDENCY_AUDIT.md  P1_4_FUZZING_EXECUTION.md  PHASE_6_SECURITY_REVIEW.md  cryptography.md  i2p-anonymity-review.md
examples/: i2p_usage.rs
test_data/diagnostics/: .gitkeep  baseline.json  sample_successful_run.json
(+15 files in other folders)
