[workspace]
members = [
    "crates/myriadmesh-core",
    "crates/myriadmesh-crypto",
    "crates/myriadmesh-protocol",
    "crates/myriadmesh-dht",
    "crates/myriadmesh-routing",
    "crates/myriadmesh-network",
    "crates/myriadmesh-adapters/ethernet",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MyriadMesh Contributors"]
license = "GPL-3.0"
repository = "https://github.com/Societus/myriadmesh"

[workspace.dependencies]
# Cryptography
sodiumoxide = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
criterion = "0.5"

# Utilities
hex = "0.4"
blake2 = "0.10"
rand = "0.8"
bitflags = { version = "2.4", features = ["serde"] }

# Networking
socket2 = "0.5"

# Data structures
lru = "0.12"
dashmap = "5.5"

# Checksum
crc32fast = "1.3"

# Time
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
