[package]
name = "myriadmesh-android"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]
name = "myriadmesh_android"

[dependencies]
# MyriadMesh crates
myriadmesh-core = { path = "../myriadmesh-core" }
myriadmesh-crypto = { path = "../myriadmesh-crypto" }
myriadmesh-protocol = { path = "../myriadmesh-protocol" }
myriadmesh-dht = { path = "../myriadmesh-dht" }
myriadmesh-routing = { path = "../myriadmesh-routing" }
myriadmesh-network = { path = "../myriadmesh-network" }
myriadnode = { path = "../myriadnode" }

# JNI bindings
jni = "0.21"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
android_logger = "0.13"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
