[package]
name = "myriadmesh-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sodiumoxide = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
blake2 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "crypto_benchmarks"
harness = false
