[package]
name = "myriadmesh-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
myriadmesh-protocol = { path = "../myriadmesh-protocol" }
myriadmesh-crypto = { path = "../myriadmesh-crypto" }

# Cryptography (SECURITY C3: For Ed25519 signature verification)
sodiumoxide.workspace = true

# Serialization
serde.workspace = true
serde_json = "1.0"
bincode.workspace = true
serde-big-array = "0.5"  # SECURITY H1: For serializing 64-byte arrays in discovery messages

# Async runtime
tokio.workspace = true
async-trait = "0.1"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
blake2.workspace = true
rand.workspace = true
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
chrono = "0.4"
futures = "0.3"
log = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
myriadmesh-routing = { path = "../myriadmesh-routing" }
