[package]
name = "myriadmesh-adapter-ethernet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
myriadmesh-protocol = { path = "../../myriadmesh-protocol" }
myriadmesh-network = { path = "../../myriadmesh-network" }

# Workspace dependencies
serde = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
socket2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
