[workspace]

[package]
name = "myriadmesh-protocol-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
myriadmesh-protocol = { path = ".." }

[[bin]]
name = "frame_parser"
path = "fuzz_targets/frame_parser.rs"
test = false
doc = false
bench = false
